--- a/main-app/src/app/app.component.html
+++ b/main-app/src/app/app.component.html
@@ -1,1 +1,1 @@
-<user-profile></user-profile>
+<user-profile id="user-profile" [user]="user" (updateUser)="updateUser($event.detail)"></user-profile>
