--- a/main-app/src/app/app.component.html
+++ b/main-app/src/app/app.component.html
@@ -1,1 +1,5 @@
-<user-profile id="user-profile" [user]="user" (updateUser)="updateUser($event.detail)"></user-profile>
+<a routerLink="/user-profile">User Profile</a>
+<br/>
+<a routerLink="/logfile-analysis">LogfileAnalysis</a>
+
+<router-outlet></router-outlet>
