feat: dynamically include logfile web component

--- a/main-app/src/app/logfile-analysis/logfile-analysis.component.html
+++ b/main-app/src/app/logfile-analysis/logfile-analysis.component.html
@@ -1,1 +1,4 @@
-<p>logfile-analysis works!</p>
+<p>logfile-analysis in main</p>
+<div *ngIf="finishedLoadingScript">
+  <logfile-analysis></logfile-analysis>
+</div>
