feat: add serverData input to logfile-analysis

--- a/logfile-analysis-component/src/app/logfile-analysis/logfile-analysis.component.html
+++ b/logfile-analysis-component/src/app/logfile-analysis/logfile-analysis.component.html
@@ -1,1 +1,8 @@
-<p>logfile-analysis works!</p>
+<ul *ngIf="serverData; else displayUserInfo">
+  <li *ngFor="let server of serverData">
+    {{server?.servername}}: <a [href]="sanitizeUrl(server?.endpoint)">{{server?.endpoint}}</a>
+  </li>
+</ul>
+<ng-template #displayUserInfo>
+  No server data to display.
+</ng-template>
