feat: delete and add server in logfile-analysis

--- a/logfile-analysis-component/src/app/app.component.html
+++ b/logfile-analysis-component/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-logfile-analysis [serverData]="serverData"></app-logfile-analysis>
+<app-logfile-analysis [serverData]="serverData" (deleteServerAtIndex)="deleteServer($event)" (addServer)="addServer($event)"></app-logfile-analysis>
