--- a/main-app/src/app/logfile-analysis/logfile-analysis.component.html
+++ b/main-app/src/app/logfile-analysis/logfile-analysis.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="finishedLoadingScript">
-  <logfile-analysis [serverData]="serverData"></logfile-analysis>
+  <logfile-analysis [serverData]="serverData" (deleteServerAtIndex)="deleteServer($event.detail)" (addServer)="addServer($event.detail)"></logfile-analysis>
 </div>
